--- a/contracts/.gitignore
+++ b/contracts/.gitignore
@@ -18,3 +18,19 @@
 
 # Hardhat coverage reports
 /coverage
+
+# Environment variables (NEVER commit these!)
+.env
+.env.local
+.env.development.local
+.env.test.local
+.env.production.local
+
+# Private keys and sensitive data
+*.key
+*.pem
+private_key.txt
+secrets.txt
+
+# .env file
+.env
