--- a/contracts/env.example
+++ b/contracts/env.example
@@ -9,5 +9,13 @@ MUMBAI_RPC_URL=https://polygon-mumbai.g.alchemy.com/v2/your-api-key
 # MUMBAI_RPC_URL=https://rpc-mumbai.maticvigil.com
 # MUMBAI_RPC_URL=https://polygon-mumbai.infura.io/v3/your-project-id
 
+# Sepolia Testnet RPC URL
+SEPOLIA_RPC_URL=https://rpc.sepolia.org
+
+# Alternative free RPC endpoints:
+# SEPOLIA_RPC_URL=https://sepolia.infura.io/v3/your-project-id
+# SEPOLIA_RPC_URL=https://ethereum-sepolia.g.alchemy.com/v2/your-api-key
+
 # Optional: API keys for block explorers
 POLYGONSCAN_API_KEY=your_polygonscan_api_key_here
+ETHERSCAN_API_KEY=your_etherscan_api_key_here
