--- a/contracts/package.json
+++ b/contracts/package.json
@@ -18,5 +18,8 @@
     "hardhat": "^3.0.4",
     "typescript": "~5.8.0",
     "viem": "^2.37.2"
+  },
+  "dependencies": {
+    "dotenv": "^17.2.2"
   }
 }
