--- a/web/package.json
+++ b/web/package.json
@@ -11,9 +11,12 @@
   "dependencies": {
     "@rainbow-me/rainbowkit": "^2.2.8",
     "@tanstack/react-query": "^5.85.9",
+    "html2canvas": "^1.4.1",
+    "jspdf": "^3.0.2",
     "next": "15.5.2",
     "react": "19.1.0",
     "react-dom": "19.1.0",
+    "react-hot-toast": "^2.6.0",
     "viem": "^2.37.2",
     "wagmi": "^2.16.9"
   },
